packages/webassemblyjs/test/fixtures/type-errors/br-2/module.wast
(module (func $type-br-operand-missing-in-block
  (i32.const 0)
	  (block (result i32) (br 0))
		  (i32.eqz) (drop)
			))
